editable database table (fin)

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -17,7 +17,7 @@
       <div class="table-responsive">
         <input type="text" class="form-control" id="searchbar" />
         <!-- Table -->
-        <table class="table table-striped table-bordered" id="sample_data">
+        <table class="table table-striped table-bordered" id="Table">
           <tr>
             <th>Username</th>
             <th>ชื่อ-นามสกุล</th>
@@ -97,7 +97,7 @@
             class="btn btn-secondary"
             data-bs-dismiss="modal"
           >
-            Close
+            ยกเลิก
           </button>
         </div>
       </form>
@@ -107,81 +107,6 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-<script>
-  $(() => {
-    $("#searchbar").on("input", function () {
-      var value = $(this).val().toLowerCase();
-      $("#dataTable tr").filter(function () {
-        $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1);
-      });
-    });
-  });
-</script>
-<script>
-  $("#form").on("submit", function (event) {
-    event.preventDefault();
-
-    $.ajax({
-      url: "/admin",
-      method: "POST",
-      data: $("#form").serialize(),
-      dataType: "JSON",
-      beforeSend: function () {
-        $("#action_button").attr("disabled", "disabled");
-      },
-      success: function (data) {
-        $("#action_button").attr("disabled", false);
-
-        $("#message").html(
-          '<div class="alert alert-success">' + data.message + "</div>"
-        );
-
-        $("#action_modal").modal("hide");
-
-        load_data();
-
-        setTimeout(function () {
-          $("#message").html("");
-        }, 5000);
-      },
-    });
-  });
-
-  $(".edit").on("click", (event) => {
-  var button = event.target;
-  var dataId = $(button).data("id");
-
-    $("#dynamic_modal_title").text("Edit Data");
-
-    $("#action").val("Edit");
-
-    $("#action_modal").modal("show");
-
-    
-
-    $.ajax({
-      url: "/admin",
-      method: "POST",
-      data: { id: dataId, action: "fetch_single" },
-      dataType: "JSON",
-      success: (data) => {
-        $("#fullNamefloatingInput").val(data.fullName);
-        $("#addressfloatingInput").val(data.address.address);
-        $("#districtfloatingSelectGrid").val(data.address.district);
-        $("#subdistrictfloatingSelectGrid").val(data.address.subdistrict);
-        $("#cityfloatingSelectGrid").val(data.address.city);
-        $("#postCodefloatingSelectGrid").val(data.address.postCode);
-        $("#citizen").val(data.citizen);
-        $("#phoneNumber").val(data.phoneNumber);
-        $("#bankfloatingSelectGrid").val(data.bank.bank);
-        $("#bookBank").val(data.bank.bookBank);
-        $("#bookBankBranch").val(data.bank.bookBankBranch);
-        $("#bookBankNumber").val(data.bank.bookBankNumber);
-        $("#id").val(data.bank._id);
-        
-      },
-    });
-  });
-</script>
+<script src="/js/admin_script.js"></script>
 
 <%-include("partials/footer.ejs")-%>
