migrate fetching datable to mysql

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -41,17 +41,17 @@
               </td>
               <td><%=element.fullName%></td>
               <td>
-                <%=element.address.address%> / <%=element.address.subdistrict%>
-                / <%=element.address.district%> / <%=element.address.city%> /
-                <%=element.address.postCode%>
+                <%=element.address%> / <%=element.subdistrict%>
+                / <%=element.district%> / <%=element.city%> /
+                <%=element.postCode%>
               </td>
               <td>
-                <%=element.bank.bank%> / <%=element.bank.bookBank%> /
-                <%=element.bank.bookBankNumber%> /
-                <%=element.bank.bookBankBranch%>
+                <%=element.bank%> / <%=element.bookBank%> /
+                <%=element.bookBankNumber%> /
+                <%=element.bookBankBranch%>
               </td>
-              <td><%=element.userWallet.money%></td>
-              <td><%=element.userWallet.point%></td>
+              <td><%=element.money%></td>
+              <td><%=element.point%></td>
               <td>
                 <button
                   type="button"
