add commission box

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -1,8 +1,14 @@
 <%-include("partials/header.ejs")-%>
 
-<h3 style="color: black; margin-left: 75px">วันที่</h3>
-<div class="panel panel-default daybox">
-  <div class="panel-body"><%=day%></div>
+<div class="container" style="padding: 25px;">
+  <div class="row">
+      <h3 class="panel-label">วันที่</h3>
+      <div class="panel panel-default daybox">
+        <div class="panel-body">
+          <%=day%>
+        </div>
+      </div>
+  </div>
 </div>
 
 <div class="alert alert-warning">This page is unfinish!</div>
