--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,6 +12,30 @@ footer {
   line-height: 60px; /* Vertically center the text there */
 }
 
+.panel-label{
+  color: black; text-align: center;
+}
+.commissionbox{
+  font-family: 'Tomorrow', sans-serif;
+  font-size: 25px;
+  font-weight: 400;
+  line-height: 18.1px;
+
+
+  margin:auto;
+  background-color: white;
+  color: red;
+  text-align: center;
+
+  width: 248px;
+  border: 1px solid #000000;
+  border-radius: 20px;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
 .flex-container {
   display: flex;
   flex-wrap: nowrap;
@@ -23,12 +47,12 @@ footer {
 
 .daybox{
   font-family: 'Roboto', sans-serif;
-  font-size: 15.45px;
+  font-size: 25px;
   font-weight: 400;
   line-height: 18.1px;
 
 
-  margin-left: 50px;
+  margin:auto;
   background-color: #1C3F1C;
   color: white;
   text-align: center;
