--- a/views/sponsor.ejs
+++ b/views/sponsor.ejs
@@ -1,12 +1,16 @@
 <%-include("partials/header.ejs")-%>
 
-<h3 style="color: black; margin-left: 75px;">วันที่</h3>
-<div class="panel panel-default daybox">
-  
-  <div class="panel-body">
-    <%=day%>
+<div class="container" style="padding: 25px;">
+  <div class="row">
+      <h3 class="panel-label">วันที่</h3>
+      <div class="panel panel-default daybox">
+        <div class="panel-body">
+          <%=day%>
+        </div>
+      </div>
   </div>
 </div>
+  
 
 
 <div class="row" style="text-align: center">
